# ASG210_App

./: README.md
Hardware/wiznet_asg210/: wiznet_asg210.json  wiznet_asg210_v1.1.json  wiznet_asg210_v1.2.json
Hardware/wiznet_asg210/inc/hw/: wiznet_asg210.h  wiznet_asg210_v1.1.h  wiznet_asg210_v1.2.h
Software/ASG210_HLApp_AzureIoT/: CMakeLists.txt  README.md  app_manifest.json  main.c
Software/ASG210_RTApp_W5500_SPI_BareMetal/: CMakeLists.txt  README.md  app_manifest.json  main.c
Software/Configuration/Configuration_RTApp/: ASG210_board.c  ASG210_board.h  CMakeLists.txt  README.md  app_manifest.json  common.h  main.c
Software/Configuration/Configuration_RTApp/Configuration/: ConfigData.c  ConfigData.h  segcp.c  segcp.h
Software/GPIO_HLApp_mt3620_BareMetal/: CMakeLists.txt  README.md  app_manifest.json  main.c
Software/I2C_HLApp_mt3620_BareMetal/: CMakeLists.txt  README.md  app_manifest.json  main.c
Software/I2C_SSD1306_HLApp_mt3620_BareMetal/: CMakeLists.txt  README.md  SSD1306.c  SSD1306.h  app_manifest.json  main.c
Software/OS_HAL/inc/: os_hal_uart.h
Software/OS_HAL/src/: os_hal_mbox_shared_mem.c  os_hal_uart.c
Software/UART_HLApp_mt3620_BareMetal/: CMakeLists.txt  README.md  app_manifest.json  main.c
Utils/MT3620_M4_BSP/mt3620/inc/: vector_table.h
Utils/MT3620_M4_Driver/HDL/inc/: hdl_uart.h
Utils/MT3620_M4_Driver/HDL/src/: hdl_uart.c
Utils/MT3620_M4_Driver/MHAL/inc/: mhal_uart.h
Utils/MT3620_M4_Driver/MHAL/src/: mhal_uart.c
Utils/WIZnet_Driver/ioLibrary_Driver/Ethernet/: wizchip_conf.c  wizchip_conf.h
(+8 files in other folders)
